--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -73,7 +73,7 @@
                     <br><br>
                     Email: 
                     <br>
-                    For General Inquiries:<a class="text-blue-500" href="">support@reachme.com</a>
+                    For General Inquiries: <a class="text-blue-500" href="">support@reachme.com</a>
                     <br>
                     Partnership Opportunities: <a class="text-blue-500">partners@reachmehealth.com</a>
                     <br><br>
@@ -83,8 +83,8 @@
                     <br>
                 </p>
             </div>
-            <img class="w-full dark:hidden" src="/img/contact.svg" alt="dashboard image">
-            <img class="w-full hidden dark:block" src="/img/contact.svg" alt="dashboard image">
+            <img class="w-full dark:hidden" src="{{ url_for('static', filename='img/contact.svg') }}" alt="dashboard image">
+            <img class="w-full hidden dark:block" src="{{ url_for('static', filename='img/contact.svg') }}" alt="dashboard image">
     </section>
 
     <!--Footer-->
