--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telemedicine - ReachMe</title>
+    <title>Home - ReachMe</title>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
     <link href="/tailwind.config.js" rel="script">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -67,7 +67,7 @@
                 <a href="/orderMeds">
                     <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Order Meds</button>
                 </a>
-                <a href="/contact-us.html">
+                <a href="/contact-us">
                     <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Contact Us</button>
                 </a>
             </div>
