--- a/templates/orderMeds.html
+++ b/templates/orderMeds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Medications</title>
+    <title>Order Meds - ReachMe</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
     <link href="/tailwind.config.js" rel="script">
@@ -32,7 +32,7 @@
                 <a href="/orderMeds" class="block py-2 px-3 text-white bg-green-700 rounded md:bg-transparent md:text-green-700 md:p-0 dark:text-white md:dark:text-green-500" aria-current="page">Order Meds</a>
               </li>
               <li>
-                <a href="/doctors.html" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0 dark:text-white md:dark:hover:text-green-500 dark:hover:bg-gray-700 dark:hover:text-green-300 md:dark:hover:bg-transparent">Consult Dr.</a>
+                <a href="/consult" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-green-700 md:p-0 dark:text-white md:dark:hover:text-green-500 dark:hover:bg-gray-700 dark:hover:text-green-300 md:dark:hover:bg-transparent">Consult Dr.</a>
               </li>
               <li>
                 <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:border-gray-700 dark:hover:bg-gray-700 md:dark:hover:bg-transparent">Services<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -65,6 +65,7 @@
             <div class="mr-auto place-self-center lg:col-span-7">
                 <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Order Form</h1>
                 <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Please fill this form for orders.</p>
+                  <img src="{{ url_for('static', filename='img/order-ani.svg') }}" alt="order">
                 <!--
                 <a href="#" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                     Get started
@@ -75,29 +76,29 @@
                 </a> 
               -->
             </div>
-            <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
+            <div class="lg:mt-0 lg:col-span-5 lg:flex">
               <div class="min-h-full flex items-center justify-center">
-                <div class="bg-white shadow-lg rounded-lg p-8 max-w-lg w-full">
+                <div class="dark:bg-gray-800 bg-gray-100 shadow-lg rounded-lg p-8 max-w-lg w-full">
                     
         
                     <form action="/submit" method="POST" class="space-y-4">
                         <div>
-                            <label for="Full_name" class="block font-medium text-gray-700">Full name:</label>
+                            <label for="Full_name" class="block font-medium text-gray-700 dark:text-white">Full name:</label>
                             <input type="text" id="Full_name" name="Full_name" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div>
-                            <label for="Phone_number" class="block font-medium text-gray-700">Phone number:</label>
+                            <label for="Phone_number" class="block font-medium text-gray-700 dark:text-white">Phone number:</label>
                             <input type="number" id="Phone_number" name="Phone_number" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
         
                         <div id="medications" class="space-y-4">
                             <div class="flex items-center space-x-2">
                                 <div class="flex-1">
-                                    <label for="Medication" class="block font-medium text-gray-700">Medication:</label>
+                                    <label for="Medication" class="block font-medium text-gray-700 dark:text-white">Medication:</label>
                                     <input type="text" name="Medication" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                                 </div>
                                 <div class="flex-1">
-                                    <label for="Quantity" class="block font-medium text-gray-700">Quantity:</label>
+                                    <label for="Quantity" class="block font-medium text-gray-700 dark:text-white">Quantity:</label>
                                     <input type="number" name="Quantity" min="1" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                                 </div>
                             </div>
@@ -110,7 +111,7 @@
                         </div>
         
                         <div>
-                            <label for="Shipping_address" class="block font-medium text-gray-700">Delivery Address:</label>
+                            <label for="Shipping_address" class="block font-medium text-gray-700 dark:text-white">Delivery Address:</label>
                             <input type="text" id="Shipping_address" name="Shipping_address" required class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                         </div>
                         <div class="text-center">
