--- a/templates/index.html
+++ b/templates/index.html
@@ -64,8 +64,8 @@
             <div class="mr-auto place-self-center lg:col-span-7">
                 <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-normal md:text-5xl xl:text-6xl dark:text-white"><span class="text-transparent bg-clip-text bg-gradient-to-r to-green-600 from-sky-400">ReachMe</span><br>because <i>YOU</i> matter.</h1>
                 <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Get medications, consultation, and solutions all in one place.</p>
-                <a href="/orderMeds">
-                    <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Order Meds</button>
+                <a href="/getting-started">
+                    <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Get Started</button>
                 </a>
                 <a href="/contact-us">
                     <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Contact Us</button>
@@ -88,8 +88,9 @@
             <img class="w-full hidden dark:block" src="{{ url_for('static', filename='img/content.svg') }}" alt="service image">
             <div class="mt-4 md:mt-0">
                 <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Our Mission. Our Vision.</h2>
-                <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">Our goal is to provide better access to healthcare services, especially in underserved rural areas. We aim to use telemedicine to offer consultations, prescriptions, and follow-up care, improving health outcomes in communities with limited healthcare access.</p>
-            </div>
+                <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">Our goal is to provide better access to healthcare services, especially in underserved rural areas. We aim to use telemedicine to offer consultations, prescriptions, and follow-up care, improving health outcomes in communities with limited healthcare access.
+                </p>
+              </div>
         </div>
     </section>
 
