--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,9 @@
                 <h2 class="mb-4 text-4xl tracking-tight font-bold text-gray-900 dark:text-white">Our Mission. Our Vision.</h2>
                 <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">Our goal is to provide better access to healthcare services, especially in underserved rural areas. We aim to use telemedicine to offer consultations, prescriptions, and follow-up care, improving health outcomes in communities with limited healthcare access.
                 </p>
+                <a href="/about-us">
+                  <button type="button" class="bg-green-700 focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">About Us</button>
+              </a>
               </div>
         </div>
     </section>
