--- a/templates/getting-started.html
+++ b/templates/getting-started.html
@@ -66,7 +66,7 @@
               <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Getting Started.</h1>
               <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400"></p>
 
-              <a href="/orderMeds" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
+              <a href="/orderMeds" class="inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center text-white bg-green-700 rounded-lg bg-primary-700 hover:bg-gray-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                   Order Meds
                   <svg class="w-5 h-5 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
               </a>
@@ -79,12 +79,12 @@
                 <li class="mb-10 ms-4">
                     <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                     <h3 class="text-lg font-semibold text-gray-900 dark:text-white">1. Ordering Medicines</h3>
-                    <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">By clicking on <i class="font-bold dark:text-white">Order Meds</i>, you can request medications for yourself to be delivered either to a nearby drop point or directly to your home.</p>
+                    <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">By clicking on <i class="font-bold text-green-700 dark:text-green-500">Order Meds</i>, you can request medications for yourself to be delivered either to a nearby drop point or directly to your home.</p>
                 </li>
                 <li class="mb-10 ms-4">
                     <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                     <h3 class="text-lg font-semibold text-gray-900 dark:text-white">2. Requesting Appointment</h3>
-                    <p class="text-base font-normal text-gray-500 dark:text-gray-400">Go to the <i class="font-bold dark:text-white">Consult</i> section now to book a one-on-one appointment with a doctor of your choice in just minutes.</p>
+                    <p class="text-base font-normal text-gray-500 dark:text-gray-400">Go to the <i class="font-bold text-green-700 dark:text-green-500">Consult</i> section now to book a one-on-one appointment with a doctor of your choice in just minutes.</p>
                 </li>
                 <li class="ms-4">
                     <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
