--- a/templates/consult.html
+++ b/templates/consult.html
@@ -74,19 +74,19 @@
                         <form action="/submit-consult" method="POST" class="dark:bg-gray-800 bg-gray-100 shadow-md rounded px-8 pt-6 pb-8 mt-6">
                             <div class="mb-4">
                                 <label for="name" class="block dark:text-white text-sm mb-2">Name:</label>
-                                <input type="text" id="name" name="name" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight">
+                                <input type="text" id="name" name="name" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight">
                             </div>
                             <div class="mb-4">
                                 <label for="phone" class="block text-gray-70 dark:text-white text-sm mb-2">Phone:</label>
-                                <input type="text" id="phone" name="phone" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight">
+                                <input type="text" id="phone" name="phone" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight">
                             </div>
                             <div class="mb-4">
                                 <label for="problem" class="block text-gray-70 dark:text-white text-sm mb-2">Problem:</label>
-                                <textarea id="problem" name="problem" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight"></textarea>
+                                <textarea id="problem" name="problem" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight"></textarea>
                             </div>
                             <div class="mb-4">
                                 <label for="doctor" class="block text-gray-70 dark:text-white text-sm mb-2">Select Doctor:</label>
-                                <select id="doctor" name="doctor" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight">
+                                <select id="doctor" name="doctor" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight">
                                     {% for doctor in doctors %}
                                         <option value="{{ doctor.name }}: {{ doctor.specialty }}">{{ doctor.name }} - {{ doctor.specialty }}</option>
                                     {% endfor %}
@@ -94,11 +94,11 @@
                             </div>
                             <div class="mb-4">
                                 <label for="date" class="block text-gray-70 dark:text-white text-sm mb-2">Select Date:</label>
-                                <input type="date" id="date" name="date" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight">
+                                <input type="date" id="date" name="date" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight">
                             </div>
                             <div class="mb-4">
                                 <label for="time_slot" class="block text-gray-70 dark:text-white text-sm mb-2">Select Time Slot:</label>
-                                <input type="time" id="time_slot" name="time_slot" required class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight">
+                                <input type="time" id="time_slot" name="time_slot" required class="shadow appearance-none border-gray-300 rounded w-full py-2 px-3 text-gray-700 leading-tight">
                             </div>
                             <div class="flex items-center justify-between">
                                 <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">Submit</button>
